--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.7",
 		"@types/node": "^22.15.21",
+		"emailjs-com": "^3.2.0",
 		"lucide-react": "^0.511.0",
 		"motion": "^12.15.0",
 		"react": "^19.1.0",
