--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@emailjs/browser": "^4.4.1",
 		"@tailwindcss/vite": "^4.1.7",
 		"@types/node": "^22.15.21",
 		"emailjs-com": "^3.2.0",
