--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
 	},
 	"dependencies": {
 		"@emailjs/browser": "^4.4.1",
+		"@headlessui/react": "^2.2.4",
 		"@tailwindcss/vite": "^4.1.7",
 		"@types/node": "^22.15.21",
-		"emailjs-com": "^3.2.0",
 		"lucide-react": "^0.511.0",
 		"motion": "^12.16.0",
 		"react": "^19.1.0",
