--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
 		"@headlessui/react": "^2.2.4",
 		"@tailwindcss/vite": "^4.1.7",
 		"@types/node": "^22.15.21",
+		"i18next": "^25.2.1",
 		"lucide-react": "^0.511.0",
 		"motion": "^12.16.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"react-i18next": "^15.5.2",
 		"react-icons": "^5.5.0",
 		"react-router-dom": "^7.6.0",
 		"react-toastify": "^11.0.5",
@@ -26,6 +28,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.25.0",
+		"@types/i18next-browser-languagedetector": "^3.0.0",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
 		"@vitejs/plugin-react-swc": "^3.9.0",
