* Continued project cleanup and migration to Next.js 15     * Deleted HomeView, HomeView copy (error), site.webmanifest (will be reimplemented using manifest.ts), favicon.ico (will be moved to /app/favicon.ico)     * Updated PhotographyView Link element to use Next.js Link component instead of react-router-dom link     * Logo.tsx image import updated to use my logo circular image     * Added "use client" at the top of BackToTop.tsx to make it a valid client component to use in server component.

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,11 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
+# Monolithic translation files
+/src/locales/de/translation.json
+/src/locales/en/translation.json
+/src/locales/es/translation.json
+
 # env files (can opt-in for committing if needed)
 .env*
 
