--- a/package.json
+++ b/package.json
@@ -16,25 +16,27 @@
 		"@vercel/analytics": "^1.6.1",
 		"axios": "^1.12.2",
 		"cloudinary": "^2.8.0",
+		"i18next": "^25.2.1",
+		"i18next-resources-to-backend": "^1.2.1",
 		"jsonwebtoken": "^9.0.3",
 		"lucide-react": "^0.545.0",
-        "react-icons": "^5.5.0",
 		"motion": "^12.23.25",
 		"next": "15.5.9",
 		"next-cloudinary": "^6.17.5",
+		"next-i18n-router": "^5.5.6",
 		"next-themes": "^0.4.6",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"react-floating-whatsapp": "^5.0.8",
 		"react-hook-form": "^7.65.0",
+		"react-i18next": "^15.5.2",
+		"react-icons": "^5.5.0",
 		"react-toastify": "^11.0.5",
-		"sweetalert2": "^11.26.1",
-		"zod": "^4.1.12",
-		"zustand": "^5.0.10", 
 		"react-type-animation": "^3.2.0",
+		"sweetalert2": "^11.26.1",
 		"swiper": "^11.2.8",
-        "i18next": "^25.2.1", 
-		"react-i18next": "^15.5.2"
+		"zod": "^4.1.12",
+		"zustand": "^5.0.10"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
