* Fixed esling project config & script, and also deleted config.ts file since it contains config for another project and caused errors.     * esling.config.mjs:         - Forgot to export config object.     * package.json:         - Modified "npm run lint" script to now only run lint on app, components, middleware, and src directories.     * Deleted config.ts file since it contains config for another project and caused errors.     * Deleted BlogView, ContactView, PhotographyView, and ProjectsView since layouts are used in the page.tsx for each route instead of having separate view files.     * robots.ts: Updated to use process.env.FRONTEND_URL instead of getting the url from config.ts file.     * sitemap.ts: Updated to use process.env.FRONTEND_URL instead of getting the url     * i18n.ts: fixed  any type from "t" function passed as an optional prop to initTranslations()     * SearchBar.tsx: Fixed non existing type SearchForm being imported by creating the type locally in the file

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "tickets-app",
+	"name": "thomas-dev-portfolio",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
 		"dev": "next dev --turbopack",
 		"build": "next build --turbopack",
 		"start": "next start",
-		"lint": "eslint"
+		"lint": "eslint app components src middleware.ts *.ts --max-warnings=0"
 	},
 	"dependencies": {
 		"@emailjs/browser": "^4.4.1",
