--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+	"buildCommand": "npm run build",
 	"outputDirectory": ".next",
-	"buildCommand": "npm run build"
+	"installCommand": "npm install"
 }
